k8s/networkpolicy/api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: api-policy
  namespace: bank-complaint

spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
    - Ingress
    - Egress

  ingress:

    # Ingress Controller -> API
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx

      ports:
        - protocol: TCP
          port: 8080

  egress:

    # API -> SQL Server
    - to:
        - podSelector:
            matchLabels:
              app: sqlserver

      ports:
        - protocol: TCP
          port: 1433

    # API -> CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
