k8s/networkpolicy/sqlserver-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: sqlserver-policy
  namespace: bank-complaint

spec:
  podSelector:
    matchLabels:
      app: sqlserver

  policyTypes:
    - Ingress

  ingress:

    # API -> SQL Server
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 1433
